# grove

./: .gitignore  ACP-STATE-MACHINE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PROGRESS.md  README.md  UPDATE_NOTIFICATION.md  build.rs  grove-prd-v3.md  install.ps1  install.sh  package-lock.json  package.json  tauri.conf.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
capabilities/: default.json  main.json  tray.json
docs/: acp-agent-surface.md  agents.html  anywhere.html  board-spec.md  capabilities.md  extend.html  index.html  studio.html  workflow.html
docs/css/: grove.css
docs/js/: grove.js
grove-web/: eslint.config.js  index.html  package-lock.json  package.json  phone-tray.html  pnpm-lock.yaml  radio.html  tray.html  vite.config.ts
grove-web/public/: manifest.json  sw.js
grove-web/src/: App.tsx  index.css  main.tsx  phone-tray-main.tsx  radio-main.tsx  tray-main.tsx
scripts/: setup-demo.sh
src/: app.rs  async_ops_state.rs  check.rs  config_state.rs  dialogs.rs  difit.rs  error.rs  event.rs  fs_link.rs  hooks.rs  main.rs  notification_state.rs  review_state.rs  ui_state.rs
src-tauri/: Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon-light.icns  icon.icns
src/acp/: adapter.rs  mod.rs
src/agent_graph/: error.rs  inject.rs  mod.rs  tools.rs  user_ops.rs
src/agent_usage/: claude.rs  minimax.rs  mod.rs  zai.rs
src/api/: auth.rs  csrf.rs  error.rs  mod.rs  perf_middleware.rs  perf_tracing.rs  radio_server.rs  state.rs
src/automation/: cron_util.rs  executor.rs  mod.rs  scheduler.rs
src/cli/: acp.rs  agent.rs  diff.rs  fp.rs  gui.rs  hooks.rs  init.rs  mcp.rs  mcp_bridge.rs  migrate.rs  mod.rs  web.rs
src/diff/: mod.rs
src/git/: cache.rs  mod.rs
src/model/: loader.rs  mock.rs  mod.rs  workspace.rs  worktree.rs
src/operations/: mod.rs  projects.rs  skills.rs  tasks.rs
src/session/: mod.rs
src/stats/: mod.rs
src/storage/: agent_graph.rs  agent_install.rs  agent_registry.rs  agent_supplement.rs  ai.rs  ai_data.rs  automations.rs  chat_attachments.rs  chat_history.rs  comments.rs  config.rs  curated_agents.json  curated_agents.rs  custom_agent.rs  database.rs  diff_comments.rs  difit_session.rs  installed_agents.rs  keymap.rs  libraries.rs  migrate_chats.rs  mod.rs  notes.rs  sketch_checkpoints.rs  sketches.rs  skills.rs  taskgroups.rs  tasks.rs  token_usage.rs  workspace.rs
src/symbols/: extractor.rs  indexer.rs  mod.rs  store.rs  types.rs
src/theme/: colors.rs  detect.rs  mod.rs
src/tmux/: layout.rs  (+1 more)
(+522 files in other folders)
